--- a/pills_visualization/www/graph/index.html
+++ b/pills_visualization/www/graph/index.html
@@ -19,7 +19,7 @@
     
     <!-- 10 Boxes (4 per row) -->
      <div class="outer-box">
-    <div class="title">General Stats</div>
+    <div class="title" style="color: rgb(240, 234, 234);">GENERAL STATS</div>
     <div class="inner-content">
         <div class="box" style="background-color: #50a0f0;">
             <div class="icon"><img src="/assets/pills_visualization/images/hospitals.png" alt=""></div>
@@ -54,7 +54,7 @@
 </div>
 
 <div class="outer-box" style="background-color: #278df3;">  
-    <div class="title">Age Groups</div>
+    <div class="title" style="color:  rgb(240, 234, 234);">AGE GROUPS</div>
     <div class="inner-content">
     <div class="box" style="background-color: #278df3;">
         <div class="icon"><img src="/assets/pills_visualization/images/0-4.png" alt="" ></div>
@@ -90,7 +90,7 @@
 </div>
 
 <div class="outer-box" style="background-color: #1974D2;">
-    <div class="title">Gender Groups</div>
+    <div class="title" style="color:  rgb(240, 234, 234);">GENDER GROUPS</div>
     <div class="inner-content">
         <div class="box" style="background-color: #1974D2;">
             <div class="icon"><img src="/assets/pills_visualization/images/male.png" alt="" style="height: 80px;"></div>
