--- a/pills_visualization/www/graph/index.html
+++ b/pills_visualization/www/graph/index.html
@@ -89,7 +89,7 @@
 </div>
 </div>
 
-<div class="outer-box" style="background-color: #1974D2;">
+<div class="outer-box" style="background-color: #1974D2;width: calc(50% - 5px);margin: 0 auto;">
     <div class="title" style="color:  rgb(240, 234, 234);">GENDER GROUPS</div>
     <div class="inner-content">
         <div class="box" style="background-color: #1974D2;">
