--- a/pills_visualization/www/graph/index.html
+++ b/pills_visualization/www/graph/index.html
@@ -92,14 +92,14 @@
 <div class="outer-box" style="background-color: #1974D2;width: calc(50% - 5px);margin: 0 auto;">
     <div class="title" style="color:  rgb(240, 234, 234);">GENDER GROUPS</div>
     <div class="inner-content">
-        <div class="box" style="background-color: #1974D2;">
+        <div class="box" style="background-color: #1974D2;max-width: calc(50% - 15px);">
             <div class="icon"><img src="/assets/pills_visualization/images/male.png" alt="" style="height: 80px;"></div>
             <div class="content">
                 <div class="title" id="title5"></div>
                 <div class="data" id="data5"></div>
             </div>
         </div>
-        <div class="box" style="background-color: #1974D2;">
+        <div class="box" style="background-color: #1974D2;max-width: calc(50% - 15px);">
             <div class="icon"><img src="/assets/pills_visualization/images/female.png" alt="" style="height: 80px;"></div>
             <div class="content">
                 <div class="title" id="title6"></div>
