--- a/pills_visualization/www/graph/index.html
+++ b/pills_visualization/www/graph/index.html
@@ -191,6 +191,13 @@ $(document).ready(function () {
             }
         },
         plugins: {
+            title: {
+                display: true,
+                text: label,
+                // font: {
+                //     size: 18
+                // },
+            },
     legend: {
         position: "left",
         labels: {
